# vulkantest

./: CMakeLists.txt  CMakePresets.json  HelloTriangleApplication.cpp  README.md  buffers.cpp  commandpool.cpp  commonMath.cpp  depth.cpp  draw.cpp  extensions.cpp  graphicspipeline.cpp  main.cpp  notes.md  objloader.cpp  textures.cpp  vertex.cpp
cmake/utils/: compileShader.cmake
devlog/: 010426.md  030426.md  040426.md  060426.md  120426.md  130426.md  200626.md  230326.md  240326.md  250326.md  270326.md  270626.md  300326.md  TODO.md
include/: HelloTriangleApplication.hpp  commonMath.hpp  extensions.hpp  gameobjectspool.hpp  vertex.hpp
io/: CMakeLists.txt  readShaders.cpp
io/include/: readShaders.hpp
shaders/: compile.bat  secondobj.slang  slang.spv  slang2.spv  vertAndFrag.slang  vertAndFrag2.slang
utils/: CMakeLists.txt  utils.cpp
utils/include/: utils.hpp
